# eddy-catalog-generator

./: .gitignore  README.md  analyze_nulls.py  env.example  fix_collection_duplicates.py  fix_product_nulls.py  fix_review_nulls.py  pyproject.toml  test_brand_context.py  test_setup.py  test_uniqueness.py
data/evergreen/: brand_guide.md  brands.csv  catalog_config.json  collections.csv  products.csv  reviews.csv  store_info.json
data/vera_lux/: brand_guide.md  brands.csv  catalog_config.json  collections.csv  products.csv  reviews.csv  store_info.json
src/: __init__.py  __main__.py  pipeline.py  prompts.py  schema.py
src/generators/: __init__.py  brand_gen.py  collection_gen.py  product_gen.py  review_gen.py
src/utils/: __init__.py  brand_context.py  id_generator.py  name_validator.py
